@@ -9,6 +9,7 @@ $fa-down:         "\f0d7";
 $fa-minimize:     "\f0d8";
 $fa-close:        "\f00d";
 $fa-download:     "\f019";
+$fa-upload:       "\f093";
 $fa-info:         "\f05a";
 $fa-elipsis:      "\f141";
 $fa-previous:     "\f0d9";
