@@ -36,6 +36,7 @@ my $THOUSAND_SEP_RE = qr/(
     pwd => 'Passwort',
     email => 'Email',
     username => 'Benutzername',
+    upload => 'Hochladen',
     with => 'mit',
     glimpse => {
       desc => 'Zeige nur die ersten Treffer in beliebiger Reihenfolge'
@@ -124,6 +125,7 @@ my $THOUSAND_SEP_RE = qr/(
     pwd => 'Password',
     email => 'Email',
     username => 'Username',
+    upload => 'Upload',
     with => 'with',
     notAvailInCorpus => 'Not available in the current corpus',
     pubOn => 'published on',
